Revert "Css change fixes weird drop overlapping"
This reverts commit b44b7a015f65562b0a73afbaac1977a294c6f45f.

--- a/orange.css
+++ b/orange.css
@@ -46,7 +46,6 @@ span.drop-line{
     border-color: #dc3545;
     top: 0.08em;
     position: absolute;
-    right: 1em;
     height: 6px;
     border-left-width: 1px;
     border-left-style: solid;
